--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div id="greetingBox">
-            <h1>Hello</h1>
+            <h1>Hello!</h1>
             <p>I am a Data Analyst</p>
         </div>
     </header>
