note added navigation

--- a/Resume.html
+++ b/Resume.html
@@ -29,20 +29,7 @@
     </nav>
     <!-- Header Section -->
     <header>
-        <div id="imageBox">
-
-        </div>
-        
-
-        <div id="greetingBox">
-            <h1>Hello,</h1>
-            <h3>I am a Data/Business Analyst <br/ > <br/> a bit more about me: </p>
-            <!-- Buttons -->
-        <button class="button button1" onclick="window.location.href='./Resume.html'">My Resume</button>
-        <!--<button onclick="window.location.href='/page2'">Continue</button>-->
-        <button class="button button2" onclick="window.location.href='./Work.html'">My Work</button>
-        <button class="button button3" onclick="window.location.href='./Skills.html'">My Skills</button>
-        </div>
+        <h1>My Resume<br/ > <br/ >Please wait for the content to be posted...</h1>
     </header>
     <!-- About Section -->
 
