note added navigation

--- a/Resume.html
+++ b/Resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laavanya Jayabalan</title>
+    <title>Resume</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -22,14 +22,14 @@
             <li class="listItem" onclick="window.location.href='./Social.html'">
                 <a href="#social">Social Media</a>
             </li>
-            <li class="listItem" onclick="window.location.href='./Index.html'">
+            <li class="listItem" onclick="window.location.href='./index.html'">
                 <a href="#home">Home</a>
             </li>
         </ul>
     </nav>
     <!-- Header Section -->
     <header>
-        <h1>My Resume<br/ > <br/ >Please wait for the content to be posted...</h1>
+        <h1>My Resume<br/ >Please wait for the content to be posted...</h1>
     </header>
     <!-- About Section -->
 
