--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div id="greetingBox">
             <h1>Hello,</h1>
-            <h3>I am a Data/Business Analyst <br/ > <br/> a bit more about me: </p>
+            <h3>I am a Data/Business Analyst <br/ >a bit more about me: </p>
             <!-- Buttons -->
         <button class="button button1" onclick="window.location.href='./Resume.html'">My Resume</button>
         <!--<button onclick="window.location.href='/page2'">Continue</button>-->
