--- a/About.html
+++ b/About.html
@@ -22,14 +22,14 @@
             <li class="listItem" onclick="window.location.href='./Social.html'">
                 <a href="#social">Social Media</a>
             </li>
-            <li class="listItem" onclick="window.location.href='./Index.html'">
+            <li class="listItem" onclick="window.location.href='./index.html'">
                 <a href="#home">Home</a>
             </li>
         </ul>
     </nav>
     <!-- Header Section -->
     <header>
-        <h1>About...<br/ > <br/ >This page is under construction!!!
+        <h1>About...<br/ >This page is under construction!!!
         </h1>
       
            
