--- a/Skills.html
+++ b/Skills.html
@@ -22,14 +22,14 @@
             <li class="listItem" onclick="window.location.href='./Social.html'">
                 <a href="#social">Social Media</a>
             </li>
-            <li class="listItem" onclick="window.location.href='./Index.html'">
+            <li class="listItem" onclick="window.location.href='./index.html'">
                 <a href="#home">Home</a>
             </li>
         </ul>
     </nav>
     <!-- Header Section -->
     <header>
-        <h1>My Skills<br/ > <br/ >Please wait for the content to be posted...</h1>
+        <h1>My Skills<br/ >Please wait for the content to be posted...</h1>
     </header>
     <!-- About Section -->
 
