--- a/Social.html
+++ b/Social.html
@@ -23,14 +23,14 @@
             <li class="listItem" onclick="window.location.href='./Social.html'">
                 <a href="#social">Social Media</a>
             </li>
-            <li class="listItem" onclick="window.location.href='./Index.html'">
+            <li class="listItem" onclick="window.location.href='./index.html'">
                 <a href="#home">Home</a>
             </li>
         </ul>
     </nav>
     <!-- Header Section -->
     <header>
-        <h1>Social Media<br/ > <br/ >This page is under construction!!!
+        <h1>Social Media<br/ >This page is under construction!!!
         </h1>
         
            
