--- a/Work.html
+++ b/Work.html
@@ -22,7 +22,7 @@
             <li class="listItem" onclick="window.location.href='./Social.html'">
                 <a href="#social">Social Media</a>
             </li>
-            <li class="listItem" onclick="window.location.href='./Index.html'">
+            <li class="listItem" onclick="window.location.href='./index.html'">
                 <a href="#home">Home</a>
             </li>
         </ul>
